# broadside

./: .gitignore  DEVELOPMENT.md  LICENSE.txt  README.md  app.spec  environment.yml  requirements.txt  setup.cfg  setup.py
broadside/: __init__.py  _run.py  utils.py  viewer.py
broadside/components/: __init__.py  color.py  editor.py  mainwindow.py  session.py  state.py  task.py  utils.py  viewer.py  viewer_model.py  viewermodel.py  window.py  worker.py
broadside/components/analysis/: __init__.py  view.py
broadside/components/annotation/: __init__.py  view.py
broadside/components/navigation/: __init__.py  model.py  view.py
broadside/components/project/: __init__.py  device.py  sample.py  view.py
broadside/components/project/block/: __init__.py  blockdiagram.py  indicator.py  sample.py
broadside/components/project/device/: __init__.py  payload.py
broadside/components/project/image/: __init__.py  tasks.py  workers.py
broadside/components/project/panel/: __init__.py  channel.py
broadside/components/steps/: __init__.py
broadside/components/steps/analysis/: __init__.py  view.py
broadside/components/steps/annotation/: __init__.py  async.json  bows.py  view.py
broadside/components/steps/project/: __init__.py  view.py
broadside/gui/: color.py  mainwindow.py  utils.py  viewer.py
broadside/gui/components/: MainWindow.py  ProjectWidget.py  __init__.py  devices.py  editor.py  mainwindow.py  napariwindow.py  panel.py  project.py  projectpanel.ui  sequence.py  utils.py
broadside/gui/components/project/: block.py  (+7 more)
broadside/gui/models/: DeviceListModel.py  PanelListModel.py  __init__.py  block.py  device.py  formulation.py  image.py  panel.py  project.py  samplegroup.py
broadside/gui/styles/: default.qss
broadside/models/: block.py  device.py  domain.py  formulation.py  image.py  panel.py  payload.py  project.py  sequence.py  state.py  task_graph.py  utils.py
broadside/models/_tests/: test_project.py  test_sequence.py
broadside/resources/styles/: _dark.qss  dark.qss  default.qss  global.qss  light.qss
broadside/utils/: __init__.py  colors.py  events.py  geom.py  profile.py  qt.py  serializable.py  validatable.py
nextflow/: .gitignore  DEVELOPMENT.md  nextflow.config
nextflow/envs/: after-annotate-env.yml  before-annotate-env.yml
nextflow/pipelines/: before-annotate.nf  prepare-cube-alignment.nf  prepare-rounds.nf  process-scenes.nf
nextflow/src/broadside/: Scene.groovy  Slide.groovy
src/broadside/adjustments/: alignment.py  hot_pixels.py
src/broadside/utils/: search.py
(+21 files in other folders)
