[metadata]
name = broadside
version = 0.0.1
description = Image processing pipelines for the Lab for Bio-Micro Devices
long_description = file: README.md, LICENSE
keywords =
    drug diffusion
    precision medicine
    microscopy
    fluorescence microscopy
    imaging
    bio-imaging
    spectral unmixing
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Image Processing
author = Sebastian Ahn
project_urls =
    repository = https://github.com/biomicrodev/broadside
    laboratory = https://jonaslab.bwh.harvard.edu

[options]
packages = find:
;zip_safe = True
;include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
before-annotate =
    ashlar
    bokeh!=3.*
    dask
    distributed
    imageio
    natsort
    numba
    numpy
    ome-types
    opencv-python
    pandas
    pint
    pillow
    pygifsicle
    scikit-image
    scipy
    tifffile
    zarr
    picasso @ git+https://github.com/biomicrodev/picasso.git@master
    pybasic @ git+https://github.com/biomicrodev/pybasic.git@master
annotate =
    imageio
    imageio-ffmpeg
    napari
    ome-zarr
    pygifsicle
    pyside2
    qtpy
after-annotate =
dev =
    black
    bokeh
    jupyter
    matplotlib
    orjson
    perfplot
    py-spy

;    "distributed",
;    "imageio",
;    "fast-histogram",
;    "h5py",
;    "napari[pyside2]",
;    "napari-ome-zarr",
;    "natsort",
;    "numcodecs",
;    "ome-zarr",
;    "qtpy",
;    "scikit-image",
;    "scipy",
;    "shapely",
;    "tqdm",
;    "xarray",
;    "zarr",
;    "bmd-perf @ git+https://github.com/biomicrodev/bmd-perf.git@master",

[options.entry_points]
console_scripts =
    compute-cube-alignments = bin.preprocess.compute_cube_alignments:run

    make-illum-profiles     = bin.preprocess.make_illum_profiles:run
    assess-illum-profiles   = bin.preprocess.assess_illum_profiles:run
    make-unmixing-mosaic    = bin.preprocess.make_unmixing_mosaic:run

    stack-tiles             = bin.preprocess.stack_tiles:run
    register-and-stitch     = bin.preprocess.register_and_stitch:run
    write-ome-metadata      = bin.preprocess.write_ome_metadata:run
    assess-tissue-loss      = bin.preprocess.assess_tissue_loss:run
